--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -9,7 +9,7 @@ website: https://github.com/GreenJon902
 commands:
   coloredChat:
     description: Your description
-    usage: /<command> [[say|s]|[nick|n]|[toggleauto|ta]] [[flatcolor|fc] {color}]|[rainbow|r (spacing)]|[gradient|g] [{keyframe}...|{keyframe}{amountTillNextKeyFrame}...]]
+    usage: /<command> [[say|s]|[nick|n]|[toggleauto|ta]] [[flatcolor|fc] {color}]|[rainbow|r (resolution)]|[gradient|g] [{keycolor}...|{keycolor}{amountTillNextKeyColor}...]]
     permission: coloredChat
 permissions:
   coloredChat:
@@ -31,11 +31,11 @@ permissions:
   coloredChat.auto.flatColor:
     default: true
 
-    coloredChat.nick:
-      default: op
-    coloredChat.nick.rainbow:
-      default: true
-    coloredChat.nick.gradient:
-      default: true
-    coloredChat.nick.flatColor:
-      default: true
+  coloredChat.nick:
+    default: op
+  coloredChat.nick.rainbow:
+    default: true
+  coloredChat.nick.gradient:
+    default: true
+  coloredChat.nick.flatColor:
+    default: true
